vlib/v/checker/tests/use_byte_instead_of_u8_array_type_err.vv
struct Test {
	bar []byte
}

fn main() {}
